Fixed overflow content

--- a/src/style.css
+++ b/src/style.css
@@ -37,6 +37,8 @@ body {
     flex-direction: column;
     align-items: flex-start;
     gap: 20px;
+    max-width: 400px;
+
 }
 
 .projContainer {
@@ -46,6 +48,7 @@ body {
     gap: 10px;
     font-size: 2rem;
 }
+
 .projectContainerDiv {
     display:flex;
     justify-content: space-between;
@@ -229,4 +232,16 @@ label {
     color: white;
     font-size: calc(1em+0.2rem);
     font-weight: bold;
+}
+
+.projectDiv,
+.titleDiv,
+.descriptionDiv,
+.dueToDiv {
+    word-wrap: break-word;
+    max-width: inherit;
+}
+
+.projectDiv {
+    overflow: auto;
 }
